--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -78,7 +78,14 @@
       %span.item-container1__item-price-tax (税込)
       %span.item-container1__item-price-shipping-fee
         -# = @product.delivery_charge
-    = link_to " 購入画面に進む", root_path,  class:"item-container1__item-buy-btn"
+      -if user_signed_in? && current_user.id == @product.user_id # 自分が出品した商品詳細画面
+        = link_to "商品の編集", edit_product_path, class: "item-container1__item-buy-btn"
+        %p
+          or
+        = link_to "出品を再開する","", class: "item-container1__item-buy-btn"
+        = link_to "この商品を削除する",  product_path(@product.id), method: :delete, class: "item-container1__item-buy-btn"
+      - else # 他者が出品した商品詳細画面
+        = link_to " 購入画面に進む", root_path,  class:"item-container1__item-buy-btn"       
     .item-container1__item-description 
       %p.item-description-inner
         -# This is description area⬇︎ 
