finish_pro_index_image_size_adjust
#what

as a title

--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -90,11 +90,11 @@
             word-break: break-word;
             white-space: normal;
             font-size: 14px;
-            color: #333;
+            color: white;
           }//&-name
           &-num{
             justify-content: space-between;
-            margin: 8px 0 0;
+            margin: 28px 0 0;
             display: flex;
           }//&-num
           &-price{
