--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -24,19 +24,14 @@
               .items-box
                 = link_to product_path(product), method: :get do
                   .items-box_photo
-                    = image_tag product.images.find_by(product_id: product.id).image_url
+                    = image_tag product.images.find_by(product_id: product.id).image_url, size: "213x260"
                   .items-box_body
                     %h3.items-box-name
-                      = product.name
+                      ¥ 
+                      = product.price
                     .items-box-num
                       .items-box-price
-                        ¥ 
-                        = product.price
-                      .items-box-icon
-                        %i.far.fa-heart
-                        = rand(50) + 1
-                    .items-box-tax
-                      (税込)
+                        = product.name
                 -# -if product.purchaser_id.present?
                 -#   .items-box_photo__sold
                 -#     .items-box_photo__sold__inner
