finish_gretel_function
#what

パンくず機能の実装

#why
ユーザビリティをあげるためにパンくず機能を実装した。

--- a/app/views/mypages/edit.html.haml
+++ b/app/views/mypages/edit.html.haml
@@ -1,4 +1,7 @@
 =render partial: 'layouts/header'
+- breadcrumb :mypage3
+-# 下記を記述した箇所にパンくずリストが表示される。
+= breadcrumbs pretext: "",separator: " &rsaquo; "
 .wrapper1.clearfix
   =render 'mypages/mypage-sidemenu'
 
