--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -80,7 +80,7 @@
     line-height: 48px;
     text-decoration: none;
     letter-spacing: 1px;
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1);
+    // box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1);
     a {
       text-decoration: none;
       color: black;
