--- a/app/views/address/edit.html.haml
+++ b/app/views/address/edit.html.haml
@@ -1,4 +1,7 @@
 =render partial: 'layouts/header'
+- breadcrumb :mypage1
+-# 下記を記述した箇所にパンくずリストが表示される。
+= breadcrumbs pretext: "",separator: " &rsaquo; "
 .background
   .mypage-box
     %main.my-containercleanfix
