--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -9,15 +9,24 @@
       %span.listing-upload--require 必須
       %p.listing-upload__subtext 最大10枚までアップロードできます
       .listing-upload__wrapper
-        -# = render partial: 'products/image-box', collection: @product.images
-
+        -# = render 'image-box', collection: @product.images
         .listing-upload__drag-box{onclick: "$('#photo_upload').click()"}
          
           .listing-upload__drag-box--inner-text
             クリックしてファイルをアップロード
-      = f.fields_for :images do |i|
-        = i.file_field :image
-        .preview-reset リセットアップロード
+      #image-box
+        = f.fields_for :images do |image|
+          .js-file_group{"data-index" => "#{image.index}"}
+            = image.file_field :image, class: 'js-file'
+            %span.js-remove 削除
+          - if @product.persisted?
+            = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
+        - if @product.persisted?
+          .js-file_group{"data-index" => "#{@product.images.count}"}
+            = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][src]", class: 'js-file'
+            .js-remove 削除
+          -# = .f.submit
+          -# = link_to '削除', product_path(@product.images), method: :delete 
 
     .listing-content.clearfix
       .listing-product-name
@@ -29,8 +38,8 @@
       .listing-product-description
         = f.label '商品の説明', class: 'listing-default__label'
         %span.listing-default--require 必須
-        = f.text_area :introduction, class: 'listing-default__form-field',placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", value: "#{@product.description}"
-        = render partial: 'edit-error-messages', locals: {jp: "商品の説明", column: "product_introduction"}
+        = f.text_area :description, class: 'listing-default__form-field',placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", value: "#{@product.description}"
+        = render partial: 'edit-error-messages', locals: {jp: "商品の説明", column: "description"}
 
     .listing-content.clearfix
       .listing-sub-head 商品の詳細
@@ -161,5 +170,5 @@
       #delete-photos
       #upload-photos
 
-=render partial: 'layouts/footer'
-=render partial: 'layouts/footer-button'
+  =render partial: 'layouts/footer'
+  =render partial: 'layouts/footer-button'
