--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -4,7 +4,6 @@
 
 $sub-text-color: #333;
 
-// ？マークのhelpリンク
 .listing-product-help {
   display: inline-block;
   width: 14px;
@@ -18,7 +17,6 @@ $sub-text-color: #333;
   text-decoration: none;
 }
 
-// 説明文内の青文字リンク
 .subtext-link {
   text-decoration: none;
   color: $blue;
@@ -51,7 +49,6 @@ $sub-text-color: #333;
 .listing-upload {
   @include form-border-top;
   width: 100%;
-  // height: 303px;
   padding: 40px;
   
   &__label {
@@ -98,7 +95,6 @@ $sub-text-color: #333;
   }
 }
 
-// TODO:画像プレビュー用
 .pre-image-box{
   height: 160px;
   width: 114px;
@@ -111,7 +107,6 @@ $sub-text-color: #333;
     }
 }
 
-///// フォーム大枠基本セット /////
 .listing-content {
   @include form-border-top;
   width: 100%;
@@ -128,7 +123,6 @@ $sub-text-color: #333;
   width: 400px;
 }
 
-///// listingページのフォーム内基本パーツセット /////
 .listing-default {
   &__label {
     @include form-label;
@@ -138,7 +132,6 @@ $sub-text-color: #333;
     @include form-require;
 
     &--price {
-      // line-hightが打ち消せないので直に書いた
       background-color: rgb(234, 53, 45);
       border-radius: 2px;
       color: $white;
@@ -163,9 +156,8 @@ $sub-text-color: #333;
     height: 140px;
   }
 
-} /* listing-product-name */
+}
 
-// listingページのセレクトフォーム
 .listing-select-wrapper{
   font-size: 14px;
   line-height: 14px;
@@ -177,7 +169,6 @@ $sub-text-color: #333;
   }
   &__box{
     width: 100%;
-    // margin-top: 2px;
     display: inline-block;
     position: relative;
     &--select{
@@ -194,7 +185,6 @@ $sub-text-color: #333;
   }
 }
 
-// マージン調整用
 .listing-product {
   &-description {margin-top: 40px;}
   &-status{margin-top: 40px;} 
@@ -209,7 +199,6 @@ $sub-text-color: #333;
   }
 }
 
-// 利益計算フォーム
 .form-right-justified {
   width: 100%;
   height: 72px;
@@ -249,7 +238,7 @@ $sub-text-color: #333;
       border: 1px solid #ccc;
     }
   }
-} /* form-right-justified */
+}
 
 .form-right-justified-sub {
   height: 68px;
@@ -282,8 +271,6 @@ $sub-text-color: #333;
   }
 }
 
-
-// 送信ボタンと注意書きボックス
 .listing-product-submit-box {
   @include form-border-top;
   height: 328px;
