--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -7,43 +7,36 @@
     width: 700px;
     box-sizing: border-box;
     text-align: center;
-    .item-container1__item-name {
+    &__item-name {
       font-size: 24px;
       word-wrap: break-word;
       line-height: 1.4;
       font-weight: bold;
     }
-    .item-container1__item-content {
-      // @include clearfix;
+    &__item-content {
       margin: 16px 0 0;
       .content--photo {
         float: left;
         width: 300px;
         min-height: 380px;
-        overflow: hidden;  /* ここに書くことで隠れる */
+        overflow: hidden;
         margin: 0 auto;
         background: $thin_gray;
 
         .content--photo-up {
-          // @include clearfix;
           background: $much_thin_gray;
           height: 300px;
           width: 3000px;
           border-collapse: collapse;
-          //overflow: hidden;   /* ここにこれらを書いても写真は隠れない 記録として残す */
           position: relative;
           .photo-up-piece {
             height: 300px;
             width:300px;
             float:left;
-           
-            //overflow: hidden;   /* ここにこれらを書いても写真は隠れない
-            //display: flex;          記録として残す */
           }
 
         }
         .content--photo-down {
-          // @include clearfix;
           height: 120px;
           border-collapse: collapse;
           overflow: hidden;
@@ -54,7 +47,7 @@
             border-collapse: collapse;
             cursor: pointer;
           }
-          .content--photo-down__piece.activ {
+          .content-photo-down__piece.activ {
             filter:alpha(opacity=100)!important;
             -moz-opacity: 1!important;
             opacity: 1!important;
@@ -63,20 +56,20 @@
       }
       .content--detail-table {
         float: right;
-        width: 300px; //100% before
-        height: 420px; //420px before
+        width: 300px;
+        height: 420px; 
         border-collapse: collapse;
         border: 1px solid $thin_gray;
         .table {
-          .table--section {
-            .table--section-left {
+          &--section {
+            &--section-left {
               width: 39%;
               padding: 8px;
               font-weight: 400;
               background: $much_thin_gray;
               border: 1px solid $thin_gray;
             }
-            .table--section-right {
+            &--section-right {
               width: 61%;
               padding: 8px;
               text-align: left;
@@ -89,7 +82,7 @@
         }
       }
     }
-    .item-container1__item-price {
+    &__item-price {
       margin: 24px 0 0;
       display: block;
       font-size: 36px;
@@ -110,7 +103,7 @@
         display: inline-block;
       }
     }
-    .item-container1__item-buy-btn {
+    &__item-buy-btn {
       margin: 16px 0 24px;
       height: 60px;
       line-height: 60px;
@@ -125,7 +118,7 @@
         cursor: pointer;
       }
     }
-    .item-container1__item-buy-btn__sold{
+    &__item-buy-btn__sold{
       margin: 16px 0 24px;
       height: 60px;
       line-height: 60px;
@@ -137,7 +130,7 @@
       font-weight: 600;
       font-size: 24px;
     }
-    .item-container1__item-description {
+    &__item-description {
       padding: 32px 0 0;
       line-height: 1.5;
       font-size: 18px;
@@ -146,8 +139,7 @@
         text-align: left;
       }
     }
-    .item-container1__item-other-btn {
-      // @include clearfix;
+    &__item-other-btn {
       margin: 16px 0 0;
       .link_btn_left {
         float: left;
@@ -163,7 +155,7 @@
       }
       .link_btn_right {
         float: right;
-        margin: 8px 0 0;    /* ここでの text-decoration: none; 効かず。 */
+        margin: 8px 0 0;
         .item-other-btn-right {
           margin: 1px 0 0 8px;
           display: inline;
@@ -181,11 +173,10 @@
   }
   
   .item-nav {
-    // @include clearfix;
     margin: 24px auto 0;
     width: 700px;
     text-decoration: none;
-    .item-nav__link-prev {
+    &__link-prev {
       width: 45%;
       float: left;
       position: relative;
@@ -195,7 +186,7 @@
         text-decoration: underline;
       }
     }
-    .item-nav__link-next {
+    &__link-next {
       width: 45%;
       float: right;
       position: relative;
@@ -236,7 +227,6 @@
         }
       }
       .item-others--seller_product{
-        //display: inline-block;  効果なしであることを記録するため記す
         width: 700px;
         padding: 0;
         .item-others--seller_product_box {
@@ -244,7 +234,6 @@
           width: 220px;
           height: 330px;
           float: left;
-          //display: inline;  効果なしであることを記録するため記す
           .item-others--seller_product_box--figure {
             height: 220px;
             width: 220px;
@@ -261,7 +250,7 @@
     }
     .item-others--product {
       overflow: hidden;
-      .item-others--product__category-name {
+      &__category-name {
         margin: 24px 0 8px;
         font-size: 22px;
         font-weight: bold;
@@ -272,16 +261,16 @@
           text-decoration: underline;
         }
       }
-      .item-others--product__content-product-box {
+      &__content-product-box {
         margin: 0 13px 20px 0;
         width: 220px;
         float: left;
-        .item-others--product-box--figure {
+        &--figure {
           height: 220px;
           overflow: hidden;
           position: relative;
         }
-        .item-others-product-box--name {
+        &--name {
           height: 110px;
           padding: 16px;
         }
@@ -310,7 +299,7 @@ body {
     letter-spacing: 2px;
     font-weight: 600;
   }
-}//.content--photo_sold
+}
 
 .item-box__image{
   width: 220px !important;
