--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,7 @@
 @import './address';
 @import './mypage/edit';
 @import './products/show';
+@import './purchases.scss';
+@import './payment-top.scss'; 
+// 上の一行消すかもしれない
+@import './pay_done.scss';
