--- a/app/views/signup/address.html.haml
+++ b/app/views/signup/address.html.haml
@@ -17,7 +17,7 @@
   .third-main
     %section.third-main-wrapper
       .third-main-wrapper__title 発送元・お届け先住所入力
-      = form_for @user, url: credit_signup_index_path, method: :get, html: {class: 'third-main-wrapper__box'} do |f|
+      = form_for @user, url: signup_index_path, method: :post, html: {class: 'third-main-wrapper__box'} do |f|
         .third-main-wrapper__box--inner
           .third-main-wrapper__form-top
             = f.label 'お名前', class: 'third-main-wrapper__form--label'
