--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import './mypage/edit';
 @import './products/show';
 @import './purchases.scss';
+@import './purchase.scss';
 @import './payment-top.scss'; 
 // 上の一行消すかもしれない
 @import './pay_done.scss';
