--- a/app/views/purchase/done.html.haml
+++ b/app/views/purchase/done.html.haml
@@ -1,84 +1,73 @@
 .buy-confirmation-all
   = render "shared/user-header" 
-
-  .wait-content
-    .content-wait
-      .content-wait_upper
-        %i.far.fa-clock.fa-2x
-        .content-wait_upper_text
+  .signup-container
+    .purchase-header
+      .purchase-header__title
+        .purchase-header__title--icon
+          %i.far.fa-clock
+        .purchase-header__title--body
           発送をお待ちください
-      .content-wait_bottom
-        出品者からの発送通知をお待ちください
-    .wait-content-header
-      %h 購入が完了しました
-    .content-main-box
-      .content-main-box__wait-item-image
-        -# = image_tag @product.photos[0].variant(resize:'200x200',auto_orient: true).processed,class:"content__main_wait--item-image"
-      .content-main-box__wait-item-name
-        いいい
-        -# = @products.product_name
+      .purchase-header__text
+        出品者の発送通知をお待ちください
+    %h2.signup-header 購入が完了しました
+    .purchase-product-container
+      .purchase-product-container__image
+        - @products_image.each do |product|
+          = image_tag product.images.find_by(product_id: product.id).image_url, size: "213x260"
+      .purchase-product-container__title
+        = @products.name
+    .purchase-product-container
+      .purchase-product-container__price
+        ="¥ #{@products.price}"
+        - if @products.fee == "送料込み（出品者負担）"
+          送料込み
+        - else
+          ＋ 送料 ¥ 500
 
+    .purchase-buyer-container
+      .purchase-buyer-container__content
+        %h3.purchase-buyer-container__title
+          配送先
+        %p.purchase-buyer-container__text
+          = "〒#{current_user.address_number}"
+          %br
+          = current_user.address_prefecture
+          = current_user.address_name
+          = current_user.address_block
+          = current_user.address_building
+        %p.purchase-buyer-container__text
+          = current_user.last_name
+          = current_user.first_name
+    .purchase-buyer-container
+      .purchase-buyer-container__content
+        %h3.purchase-buyer-container__title
+          支払い方法
+        %p.purchase-buyer-container__text
+          = "**** **** **** " + @default_card_information.last4
+          %br
+            - exp_month = @default_card_information.exp_month.to_s
+            - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+            = exp_month + " / " + exp_year
+          %span.payment-confirmation__detail--image
+          = image_tag "/images/#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
 
-    .wait-payment
-      .wait-payment__upper
-        .wait-payment__upper--item-price
-          -# =converting_to_jpy(@products_price)
-        .wait-payment__upper--item-shipping 送料込み
-
-    .payment-after-mypage
-    = link_to "マイページへもどる","/mypages/#{current_user.id}",class:"payment-after-mypage__return"
-    -# .users-address-information
-    -#   .address-confirmation
-    -#     %p.address-confirmation__delivery 配送先
-    -#     .address-confirmation__delivery--detail 
-    -#       %p.post-number
-    -#         〒
-    -#         = current_user.address_number
-    -#       %p.address-detail
-    -#         = current_user.address_prefecture
-    -#         = current_user.address_name
-    -#         = current_user.address_block
-    -#         = current_user.address_building
-    -#       %p.name-detail
-    -#         = current_user.last_name
-    -#         = current_user.first_name
-
-
-    -# .users-payment-border
-    -#   .users-payment-information
-    -#     .payment-confirmation
-    -#       %p.payment-confirmation__title 支払い方法
-    -#       .payment-confirmation__detail
-    -#         %p.payment-confirmation__detail--number
-    -#         = "**** **** **** " + @default_card_information.last4
-            
-    -#         %p.payment-confirmation__detail--date
-    -#           - exp_month = @default_card_information.exp_month.to_s
-    -#           - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
-    -#           = exp_month + " / " + exp_year
-    -#         %span.payment-confirmation__detail--image
-    -#         = image_tag "/images/#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
-
-    -# .wait-evaluation
-    -#   .wait-evaluation-contents
-    -#     .wait-evaluation-contents__title
-    -#       発送通知後の流れ
-    -#     .wait-evaluation-contents__icon
-    -#       %i.fas.fa-star
-    -#       %i.fas.fa-laugh
-    -#       %i.fas.fa-meh
-    -#       %i.fas.fa-frown
-    -#       %i.fas.fa-star
-
-    -#     .wait-evaluation-contents__text
-    -#       商品を受け取ったら
-    -#       %br
-    -#       出品者の評価をしましょう。
-    -#       %br
-    -#       購入代金が出品者に振り込まれます。
-    -#       %br
-    -#       評価後に取引は完了です。
-        
-        
-
-  = render "shared/user-footer"
+    .purchase-buyer-container
+      %h3.purchase-buyer-container__title
+        発送通知後の流れ
+      .wait-evaluation-contents__icon
+        %i.fas.fa-star
+        %i.fas.fa-laugh
+        %i.fas.fa-meh
+        %i.fas.fa-frown
+        %i.fas.fa-star
+      .purchase-buyer-container__text
+        商品を受け取ったら
+        %br
+        出品者の評価をしましょう。
+        %br
+        購入代金が出品者に振り込まれます。
+        %br
+        評価後に取引は完了です。
+      .purchase-buyer-container__link
+        = link_to 'マイページへもどる',"/mypages/#{current_user.id}",{class: "default-link-text"}
+    = render "shared/user-footer"
