--- a/app/assets/stylesheets/purchases.scss
+++ b/app/assets/stylesheets/purchases.scss
@@ -1,11 +1,3 @@
-//仮で背景色を指定
-.buy-confirmation-header{
-  background-color: rgb(245, 245, 245);
-  width: 100vw;
-  height: 100vh;
-  // overflow: auto;
-}
-
 // mixin
 @mixin letter{
   font-weight: bold;
@@ -35,14 +27,14 @@
 }
 
 
-.content{
+.scontent{
   margin: 0 auto;
   background-color: white;
   padding:0;
-  height: 740px;
+  height: 900px;
   width: 700px;
 
-  .content-header{
+  .scontent-header{
     @include letter;
     padding: 16px;
     border-bottom: 1px solid #f5f5f5;
@@ -55,40 +47,42 @@
 
 
   &__main{
+    width: 700px;
+    height: 145px;
     max-width: 320px;
-    margin: 0 auto;
-    display: flex;
+    margin: 0 250px;
     margin-top: 30px;
-    &--item{
-      &-name{
-      text-align: left;
-      width: calc(100% - 80px);
-      margin-left: 16px;
-      font-size: 14px;
-      font-weight: bold;
-      }
+    display: flex;
+    border-bottom: 1px solid #f5f5f5;
+    &--item-image{
+      display: flex;
     }
+
+
+    .contents__subtitle{
+      text-align: center;
+      &--item-name{
+      margin: 16px;
+      font-size: 14px;
+      }
+      &--item-price{
+        font-size: 14px;
+        @include text-font;
+    }
+   }
   }
 }
+    
+
 
 .payment-information-first{
   width:320px;
-  height: 200px;
+  height: 145px;
   margin: 0 auto;
-  text-align: center;
   margin-bottom: 60px;
-  &__upper{
-    display: flex;
-    justify-content: center;
-    line-height: 1.5;
-
-    &--item-price{
-      font-size: 21px;
-      font-weight: bold;
-      @include text-font;
-    }
+  padding-top: 50px;
     &--item-shipping{
-      font-size: 14px;
+      font-size: 18px;
       padding-top: 8px;
       font-weight: normal;
       margin-left: 20px;
@@ -122,23 +116,11 @@
     &--payment_price{
       font-size: 28px;
       letter-spacing: 2px;
-    }
+    }   
+   }
+  }
+  
 
-    &--payment_decide{
-        margin-top: 15px;
-        color:white;
-        background-color: #ea352d;
-        font-weight: 600;
-        height: 49px;
-        width: 320px;
-        font-size: 15px;
-        // line-height: -4px;
-        text-align: center;
-        
-    }
-  }
-  }
-}
 
 
 
@@ -222,9 +204,22 @@
 .buy-confirmation-all{
   padding-bottom: 220px;
   width:100vw;
-  position: relative;
-  
+  position: relative; 
 }
 
-
+.buy_button{
+ margin-top: 50px;
+ margin-left: 200px;
+  .payment-information-second__middle--payment_decide{
+  margin-top: 15px;
+  color:white;
+  background-color:gray;
+  font-weight: 600;
+  height: 49px;
+  width: 320px;
+  font-size: 15px;
+  line-height: -4px;
+  text-align: center;
+ }
+}
 
