--- a/app/views/shared/_user-footer.html.haml
+++ b/app/views/shared/_user-footer.html.haml
@@ -12,4 +12,4 @@
           特定商取引に関する表記
   = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?1881812696", alt: "mercari", width: '80', height: '65'), products_path, class: 'auth-footer__logo'
   %p
-    %small.auth-footer__copyright © 2019 Mercari
+    %small.auth-footer__copyright © Mercari, inc.
