--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -289,7 +289,7 @@ body {
   border-bottom: 60px solid transparent;
   border-left: 60px solid #ea352d ;
   z-index:1;
-  position: absolute;;
+  position: absolute;
   top:213px;
   &__inner{
     transform: rotate(-45deg);
@@ -311,4 +311,3 @@ body {
     object-fit: contain;
   }
 }
-
