--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -62,6 +62,26 @@
           margin: 0 0 0 20px;
           width: 213px;
           height:330px;
+          position: relative;
+          #content--photo_sold__index{
+            width: 0;
+            height: 0;
+            border-top: 60px solid #ea352d ;
+            border-right: 60px solid transparent;
+            border-bottom: 60px solid transparent;
+            border-left: 60px solid #ea352d ;
+            z-index:1;
+            position: absolute;
+            top: 0px;
+            #content--photo_sold__inner__index{
+              transform: rotate(-45deg);
+              font-size: 28px;
+              margin:-35px 0px 0px -55px;
+              color: #fff;
+              letter-spacing: 2px;
+              font-weight: 600;
+            }
+          }
           &_photo{
             width: 213px;
             height:190px;
