--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -19,7 +19,11 @@
           - @product.images.each_with_index do |image, i|
             %li.content-photo-down__piece
               = image_tag @product.images[i].image.url, size: "60x60"
-
+            - if @product.sell_state == "売却済み"
+              .content--photo_sold
+                .content--photo_sold__inner
+                  SOLD
+                  
       %table.content--detail-table
         %tbody.table
           %tr.table--section
@@ -69,14 +73,17 @@
         = number_with_delimiter(@product.price)
       %span.item-container1__item-price-tax (税込)
       %span.item-container1__item-price-shipping-fee
-      -if user_signed_in? && current_user.id == @product.user_id # 自分が出品した商品詳細画面
-        = link_to "商品の編集", edit_product_path, class: "item-container1__item-buy-btn"
+      - if @product.sell_state == "売却済み"
+        = link_to "売り切れました", root_path,  class:"item-container1__item-buy-btn"
+      - elsif user_signed_in? && current_user.id == @product.user_id
+        = link_to "商品の編集", product_path(@product.id), class: "item-container1__item-buy-btn"
         %p
-          or
+        or
         = link_to "出品を再開する","", class: "item-container1__item-buy-btn"
         = link_to "この商品を削除する",  product_path(@product.id), method: :delete, class: "item-container1__item-buy-btn"
-      - else # 他者が出品した商品詳細画面
+      - else         # 他者が出品した商品詳細画面
         = link_to " 購入画面に進む","/purchase/#{@product.id}/",  class:"item-container1__item-buy-btn"       
+
     .item-container1__item-description 
       %p.item-description-inner
     .item-container1__item-other-btn.clearfix
