--- a/app/views/signup/done.html.haml
+++ b/app/views/signup/done.html.haml
@@ -1,19 +1,5 @@
-:css
-  li:nth-child(5).signup-header__nav--list {
-    color: #ea352d;
-    font-weight: 600;
-  }
-  li:nth-child(n+1):nth-child(-n+5) .signup-header__nav--status{
-    background-color: #ea352d;
-  }
-  li:nth-child(n+1):nth-child(-n+4) .signup-header__nav--status:after{
-    background-color: #ea352d;
-  }
-  li:nth-child(n+2):nth-child(-n+5) .signup-header__nav--status:before{
-    background-color: #ea352d;
-  }
 .signup-fifth
-  = render 'shared/sign-up-header'
+  = render 'shared/sign-up-header5'
   %section.fifth-main
     .fifth-main__title 会員登録完了
     .fifth-main__top
