--- a/app/views/signup/registration.html.haml
+++ b/app/views/signup/registration.html.haml
@@ -1,11 +1,3 @@
-:css
-  li:nth-child(1).signup-header__nav--list {
-    color: #ea352d;
-    font-weight: 600;
-  }
-  li:nth-child(1) .signup-header__nav--status{
-    background-color: #ea352d;
-  }
 :javascript
   $(function() {
     var year = $('#year').attr("value");
@@ -16,7 +8,7 @@
     $("#day option[value="+ day +"]").prop('selected', true);
   })
 .signup-first
-  = render 'shared/sign-up-header'
+  = render 'shared/sign-up-header1'
   .first-main
     %section.first-main__wrapper
       .first-main__title 会員情報入力
