new-header-scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,9 @@
 @import './purchase.scss';
 @import './payment-top.scss'; 
 @import './pay_done.scss';
+@import './sign-up-header1';
+@import './sign-up-header2';
+@import './sign-up-header3';
+@import './sign-up-header4';
+@import './sign-up-header5';
+
