--- a/app/views/purchase/show.html.haml
+++ b/app/views/purchase/show.html.haml
@@ -18,7 +18,7 @@
               送料込み
             - else
               ＋ 送料 ¥ 500
-            %span.contents__subtitle--item-shipping (税込)送料込み 
+            %span.contents__subtitle--item-shipping
 
     .content-midle
       .payment-information-first
