--- a/app/assets/stylesheets/_sign-up-header.scss
+++ b/app/assets/stylesheets/_sign-up-header.scss
@@ -90,11 +90,11 @@
 }
 
 
-li:nth-of-type(1) .signup-header__nav--status:before{//一番目の丸の後方ラインの削除
-  content: none;
-}
+// li:nth-of-type(1) .signup-header__nav--status:before{//一番目の丸の後方ラインの削除
+//   content: none;
+// }
 
-li:nth-of-type(5) .signup-header__nav--status:after{//5番目の丸の前方ラインの削除
-  content: none;
-}
+// li:nth-of-type(5) .signup-header__nav--status:after{//5番目の丸の前方ラインの削除
+//   content: none;
+// }
 
