--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,6 +1,6 @@
 .signup-forth
   %header.signup-header
-    = render 'shared/sign-up-header4'
+    = render 'signup/signup-header4'
   .forth-main
     %section.forth-main-wrapper
       .forth-main-wrapper__box--inner
