--- a/app/views/signup/address.html.haml
+++ b/app/views/signup/address.html.haml
@@ -1,5 +1,5 @@
 .signup-third
-  = render 'shared/sign-up-header3'
+  = render 'signup-header3'
   .third-main
     %section.third-main-wrapper
       .third-main-wrapper__title 発送元・お届け先住所入力
