--- a/app/views/signup/done.html.haml
+++ b/app/views/signup/done.html.haml
@@ -1,5 +1,5 @@
 .signup-fifth
-  = render 'shared/sign-up-header5'
+  = render 'signup-header5'
   %section.fifth-main
     .fifth-main__title 会員登録完了
     .fifth-main__top
