--- a/app/views/signup/phone.html.haml
+++ b/app/views/signup/phone.html.haml
@@ -1,19 +1,5 @@
--# :css
--#   li:nth-child(2).signup-header__nav--list {
--#     color: #ea352d;
--#     font-weight: 600;
--#   }
--#   li:nth-child(n+1):nth-child(-n+2) .signup-header__nav--status{
--#     background-color: #ea352d;
--#   }
--#   li:nth-child(1) .signup-header__nav--status:after{
--#     background-color: #ea352d;
--#   }
--#   li:nth-child(2) .signup-header__nav--status:before{
--#     background-color: #ea352d;
--#   }
 .signup-second
-  = render 'shared/sign-up-header'
+  = render 'signup-header2'
   .second-main
     %section.second-wrapper
       .second-wrapper__title 電話番号の確認
