--- a/app/views/signup/registration.html.haml
+++ b/app/views/signup/registration.html.haml
@@ -8,7 +8,7 @@
     $("#day option[value="+ day +"]").prop('selected', true);
   })
 .signup-first
-  = render 'shared/sign-up-header1'
+  = render 'signup-header1'
   .first-main
     %section.first-main__wrapper
       .first-main__title 会員情報入力
