--- a/app/assets/stylesheets/_sign-up-header1.scss
+++ b/app/assets/stylesheets/_sign-up-header1.scss
@@ -1,14 +1,73 @@
-li:nth-of-type(1) .signup-header__nav--status:before{//一番目の丸の後方ラインの削除
-  content: none;
+.simple-header{
+  height: 128px;
+  &__container{
+    display: flex;
+    justify-content: center;
+  }
+  &__logo{
+    width: 193px;
+    margin-top: 40px;
+  }
+  &__navigation{
+    display: inline-block;
+    width: 508px;
+    padding-left: 44px;
+    padding-top: 40px;
+    &__list{
+      display: flex;
+      justify-content: space-between;
+      color: #888888;
+      font-size: 12px; 
+      &--item{
+        position: relative;
+        z-index: 1;
+        min-width: 60px; 
+        text-align: center;
+      }
+      &--status{
+        width: 12px;
+        height: 12px;
+        margin: 8px auto 0;
+        background-color: #ccc;
+        border-radius: 50%;
+      }
+      &--status:before, &--status:after{
+        position: absolute;
+        bottom: 5px;
+        z-index: -1;    
+        display: block;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background-color: #ccc;
+      }
+      &--status:before{
+        right: 50%;
+      }
+      &--first:before, &--last:after{
+        position: initial;
+        bottom: initial;
+        z-index: initial;    
+        display: initial;
+        content: initial;
+        width: initial;
+        height: initial;
+        background: initial;
+      }
+    }
+  }
 }
 
-li:nth-of-type(5) .signup-header__nav--status:after{//5番目の丸の前方ラインの削除
-  content: none;
-}
-li:nth-child(1).signup-header__nav--list {
-  color: #ea352d;
+.current{
   font-weight: 600;
+  color: $normal-red; 
 }
-li:nth-child(1) .signup-header__nav--status{
-  background-color: #ea352d;
+.done{
+  color: #888888; 
+}
+.current .simple-header__navigation__list--status,.current .simple-header__navigation__list--status:before{
+  background-color: $normal-red;
+}
+.done .simple-header__navigation__list--status,.done .simple-header__navigation__list--status:before,.done .simple-header__navigation__list--status:after{
+  background-color: $normal-red;
 }
