--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -22,7 +22,7 @@
             = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
         - if @product.persisted?
           .js-file_group{"data-index" => "#{@product.images.count}"}
-            = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][src]", class: 'js-file'
+            = file_field_tag :image, name: "product[images_attributes][#{@product.images.count}][image]", class: 'js-file'
             .js-remove 削除
 
     .listing-content.clearfix
