--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,7 +6,7 @@
         = image_tag "heidi-fin-2TLREZi7BUg-unsplash.jpg", class: "slide-image"
       
     .product-header
-      人気のカテゴリーdddddddddddd
+      人気のカテゴリー
     .product-container
       .product-container_box__clearfix
         .text_place
