edit link & card image

--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -20,7 +20,7 @@
       .my-page-right-content
         .my-page-right-content__top
           .my-page-right-content__top__content
-            = image_tag "/images/member_photo_noimage_thumb.png"
+            = image_tag "人.jpg"
             %p.username
               = current_user.nickname
             %span 評価
@@ -34,35 +34,35 @@
             やることリスト
         %ul.my-page-right-content__main
           %li.my-page-right-content__main__column
-            = image_tag "/images/mercari_profile.png"
+            = image_tag "logo_red.svg"
             .message
               .message__text 事務局から個別メッセージ「ログイン通知」
               %i.far.fa-clock
               %span.message__text-time 2 時間前
             %i.fas.fa-angle-right
           %li.my-page-right-content__main__column
-            = image_tag "/images/mercari_profile.png"
+            = image_tag "logo_red.svg"
             .message
               .message__text 明日、5%還元お得チケットの有効期限が切れます！タップして詳細を確認しましょう。
               %i.far.fa-clock
               %span.message__text-time 2 時間前
             %i.fas.fa-angle-right
           %li.my-page-right-content__main__column
-            = image_tag "/images/mercari_profile.png"
+            = image_tag "logo_red.svg"
             .message
               .message__text 事務局から個別メッセージ「ログイン通知」
               %i.far.fa-clock
               %span.message__text-time 2 時間前
             %i.fas.fa-angle-right
           %li.my-page-right-content__main__column
-            = image_tag "/images/mercari_profile.png"
+            = image_tag "logo_red.svg"
             .message
               .message__text 事務局から個別メッセージ「ログイン通知」
               %i.far.fa-clock
               %span.message__text-time 2 日前
             %i.fas.fa-angle-right
           %li.my-page-right-content__main__column
-            = image_tag "/images/mercari_profile.png"
+            = image_tag "logo_red.svg"
             .message
               .message__text 《まもなく終了》メルカリ6周年感謝祭キャンペーン開催中！
               %i.far.fa-clock
