--- a/app/views/signup/done.html.haml
+++ b/app/views/signup/done.html.haml
@@ -6,6 +6,6 @@
       .fifth-main__inner
         %span.fifth-main__inner--text ありがとうございます。
         %br 会員登録が完了しました。
-        = link_to 'メルカリをはじめる', root_path, class: 'fifth-main__inner--btn'
+        = link_to 'Fmarketをはじめる', root_path, class: 'fifth-main__inner--btn'
     = image_tag 'sign-up-fifth-image.png', class: 'fifth-main__image'
   = render 'shared/user-footer'
