--- a/app/assets/stylesheets/mypage/_mypage.scss
+++ b/app/assets/stylesheets/mypage/_mypage.scss
@@ -150,7 +150,7 @@
         background-repeat: no-repeat;
         background-position: center 40px;
         background-size: 78px 85px;
-        background-image: url(https://www.mercari.com/jp/assets/img/common/common/logo-gray-icon.svg?61790013);
+        background-image: url(logo_white.svg);
         img{
           width:100%;
           height:100px;
