--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,67 +5,65 @@
         #h2 スマホでかんたんフリマアプリ
         #p 今すぐ無料ダウンロード！
         .footer-top-inner__right-icon
-          -# = image_tag "/images/mercari.app.acon.png", size: "68x68", class: "footer-top-inner__right-icon-left"
           .footer-top-inner__right-app
-            = link_to image_tag "appstore.png", size: "133x42", class: "footer-top-inner__right-app_icon-left", href:"https://apps.apple.com/jp/app/id667861049?l=ja"
-
-            = link_to image_tag "google-play.png", size: "133x42", class: "footer-top-inner__right-app_icon-right", href:"https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja"
+            = link_to image_tag "appstore.png", size: "133x42", class: "footer-top-inner__right-app_icon-left", href:"#"
+            = link_to image_tag "google-play.png", size: "133x42", class: "footer-top-inner__right-app_icon-right", href:"#"
       .footer-top-inner__left
 
   .footer-bottom
     .footer-main
       .footer-main__left
         .footer-cell.footer-cell_mercari
-          %h2 メルカリについて
+          %h2 Fmarketについて
           %ul
             %li
-              = link_to 'https://about.mercari.com/' do
+              = link_to '#' do
                 会社概要（運営会社）
             %li
-              = link_to 'https://careers.mercari.com/' do
+              = link_to '#' do
                 採用情報
             %li
-              = link_to 'https://about.mercari.com/press/news/' do
+              = link_to '#' do
                 プレリリース
             %li
-              = link_to 'https://jp-news.mercari.com/' do
+              = link_to '#' do
                 公式ブログ
             %li
-              = link_to 'https://www.mercari.com/jp/logo-guidelines/' do
-                メルカリロゴ利用ガイド
+              = link_to '#' do
+                Fmarketロゴ利用ガイド
             .sns-icon
-              = link_to 'https://twitter.com/mercari_jp' do
+              = link_to '#' do
                 %i.fab.fa-twitter.fa-2x
-              = link_to 'https://www.facebook.com/mercarijp' do
+              = link_to '#' do
                 %i.fab.fa-facebook-square.fa-2x
              
         .footer-cell.footer-cell_help
           %h2 ヘルプ＆ガイド
           %ul
             %li
-              = link_to 'https://www.mercari.com/jp/help_center/' do
-                メルカリガイド
+              = link_to '#' do
+                Fmarketガイド
             %li
-              = link_to 'https://www.mercari.com/jp/rakuraku-mercari/' do
-                らくらくメルカリ便
+              = link_to '#' do
+                らくらくFmarket便
             %li
-              = link_to 'https://www.mercari.com/jp/yuyu-mercari/' do
-                ゆうゆうメルカリ便
+              = link_to '#' do
+                ゆうゆうFmarket便
             %li
-              = link_to 'https://www.mercari.com/jp/rakuraku-ogata/' do
-                大型メルカリ便
+              = link_to '#' do
+                大型Fmarket便
             %li
-              = link_to 'https://www.mercari.com/jp/guide/car/' do
+              = link_to '#' do
                 車体取引ガイド
             %li
-              = link_to 'https://www.mercari.com/jp/safe/description/' do
-                メルカリあんしん・あんぜん宣言！
+              = link_to '#' do
+                Fmarketあんしん・あんぜん宣言！
             %li
-              = link_to 'https://www.mercari.com/jp/authenticity/' do
+              = link_to '#' do
                 偽ブランド品撲滅への取り組み
             %li
-              = link_to 'https://www.mercari.com/jp/box/' do
-                メルカリボックス
+              = link_to '#' do
+                Fmarketボックス
       .footer-main__center
         .footer-cell.footer-cell_privacy
           %h2.footer-title
@@ -74,47 +72,47 @@
             .footer-cell-inner__left
               %ul
                 %li
-                  = link_to 'https://www.mercari.com/jp/privacy/' do
+                  = link_to '#' do
                     プライバシーポリシー
                 %li
-                  = link_to 'https://www.mercari.com/jp/tos/' do
-                    メルカリ利用規約
+                  = link_to '#' do
+                    Fmarket利用規約
                 %li
-                  = link_to 'https://www.mercari.com/jp/tos_smartphone_support/' do
+                  = link_to '#' do
                     あんしんスマホサポート制度に関する利用特約
                 %li
-                  = link_to 'https://www.mercari.com/jp/compliance/' do
+                  = link_to '#' do
                     コンプライアンスポリシー
 
             .footer-cell-inner__right
               %ul
                 %li
-                  = link_to 'https://www.mercari.com/jp/data_security/' do
+                  = link_to '#' do
                     個人データの安全管理に係る基本方針
                 %li
-                  = link_to 'https://www.mercari.com/jp/tokutei/' do
+                  = link_to '#' do
                     特定商取引に関する表記
                 %li
-                  = link_to 'https://www.mercari.com/jp/shikin_kessai/' do
+                  = link_to '#' do
                     資金決済方に基づく表示
                 %li
-                  = link_to 'https://about.mercari.com/sustainability/' do
+                  = link_to '#' do
                     法令遵守と犯罪抑止のために
                 %li
-                  = link_to 'https://www.mercari.com/jp/help_center/category/458/' do
+                  = link_to '#' do
                     返品・返金ポリシー
       .footer-main__right
         .footer-cell.footer-cell_country
           %h2 国
           %ul
             %li
-              = link_to 'https://www.mercari.com/jp/' do
+              = link_to '#' do
                 日本
             %li
-              = link_to 'https://www.mercari.com/' do
+              = link_to '#' do
                 United Status
     .footer-sub
       .footer-sub__left
-        = link_to image_tag "fmarket_logo_white.svg", href:"https://www.mercari.com/jp/"
+        = link_to image_tag "fmarket_logo_white.svg", href:"#"
       .footer-sub__right
-        %small © Mercari, inc
+        %small © Fmarket, inc
