--- a/app/views/purchase/done.html.haml
+++ b/app/views/purchase/done.html.haml
@@ -49,7 +49,7 @@
             - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
             = exp_month + " / " + exp_year
           %span.payment-confirmation__detail--image
-          = image_tag "/images/#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
+          = image_tag "#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
 
     .purchase-buyer-container
       %h3.purchase-buyer-container__title
