--- a/app/views/purchase/show.html.haml
+++ b/app/views/purchase/show.html.haml
@@ -66,7 +66,7 @@
               - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
               = exp_month + " / " + exp_year
             %span.payment-confirmation__detail--image
-            = image_tag "/images/#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
+            = image_tag "#{@card_src}", width: '49', height: '15', alt: @card_brand, id: "card_image"
           %button.payment-confirmation__detail--change
             %a 変更する
             %i.fas.fa-angle-right
