--- a/app/views/shared/_user-footer.html.haml
+++ b/app/views/shared/_user-footer.html.haml
@@ -6,10 +6,10 @@
           プライバシーポリシー
       %li
         = link_to '#', class: 'auth-footer__list--individual--margin' do
-          メルカリ利用規約
+          Fmarket利用規約
       %li
         = link_to '#', class: 'auth-footer__list--individual--margin' do
           特定商取引に関する表記
-  = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?1881812696", alt: "mercari", width: '80', height: '65'), products_path, class: 'auth-footer__logo'
+  = link_to image_tag("logo_gray.svg", width: '80', height: '65'), products_path, class: 'auth-footer__logo'
   %p
-    %small.auth-footer__copyright © Mercari, inc.
+    %small.auth-footer__copyright © Fmarket, inc.
