--- a/app/views/shared/_user-header.html.haml
+++ b/app/views/shared/_user-header.html.haml
@@ -1,3 +1,3 @@
 %header.auth-header
   .auth-header__log
-    = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?1881812696", alt: "mercari", class: 'auth-header__log--link', width: '185', height: '49'), products_path
+    = link_to image_tag("fmarket_logo_red.svg", class: 'auth-header__log--link', width: '185', height: '49'), products_path
