--- a/app/views/signup/_signup-header2.html.haml
+++ b/app/views/signup/_signup-header2.html.haml
@@ -1,7 +1,7 @@
 %header.simple-header
   .simple-header__container
     = link_to root_path do
-      = image_tag 'https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763',class: 'simple-header__logo'
+      = image_tag 'fmarket_logo_red.svg',class: 'simple-header__logo'
     .simple-header__navigation
       %ol.simple-header__navigation__list
         %li.simple-header__navigation__list--item.done
