--- a/app/views/address/edit.html.haml
+++ b/app/views/address/edit.html.haml
@@ -2,7 +2,7 @@
 - breadcrumb :mypage1
 -# 下記を記述した箇所にパンくずリストが表示される。
 = breadcrumbs pretext: "",separator: " &rsaquo; "
-.background
+.background 1
   .mypage-box
     %main.my-containercleanfix
       = render partial: "mypages/mypage-sidemenu"
